--- a/QuranX.Web/Web.config
+++ b/QuranX.Web/Web.config
@@ -12,6 +12,7 @@
 	</appSettings>
 	<system.web>
 		<compilation debug="true" targetFramework="4.7.1" />
+		<customErrors mode="Off"/>
 		<httpRuntime targetFramework="4.7.1" relaxedUrlToFileSystemMapping="true" />
 		<httpModules>
 			<add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
