--- a/QuranX.Persistence/QuranX.Persistence.csproj
+++ b/QuranX.Persistence/QuranX.Persistence.csproj
@@ -135,6 +135,8 @@
     <Compile Include="Models\HadithReference.cs" />
     <Compile Include="Models\HadithReferenceDefinition.cs" />
     <Compile Include="Models\Verse.cs" />
+    <Compile Include="Models\VerseAnalysisWord.cs" />
+    <Compile Include="Models\VerseAnalysisWordPart.cs" />
     <Compile Include="Models\VerseText.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\LuceneIndexReaderProvider.cs" />
@@ -153,6 +155,8 @@
     <Compile Include="Services\Repositories\HadithCollectionWriteRepository.cs" />
     <Compile Include="Services\Repositories\HadithRepository.cs" />
     <Compile Include="Services\Repositories\HadithWriteRepository.cs" />
+    <Compile Include="Services\Repositories\VerseAnalysisWordRepository.cs" />
+    <Compile Include="Services\Repositories\VerseAnalysisWordWriteRepository.cs" />
     <Compile Include="Services\Repositories\VerseRepository.cs" />
     <Compile Include="Services\Repositories\VerseWriteRepository.cs" />
     <Compile Include="Services\Settings.cs" />
