--- a/QuranX.Web/QuranX.Web.csproj
+++ b/QuranX.Web/QuranX.Web.csproj
@@ -209,6 +209,7 @@
     <Compile Include="Models\CommentariesForVerse.cs" />
     <Compile Include="Models\CommentatorAndCommentary.cs" />
     <Compile Include="Models\SelectChapterAndVerse.cs" />
+    <Compile Include="Models\Translator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Views\CommentariesForVerse\CommentariesForVerse.generated.cs">
       <AutoGen>True</AutoGen>
