--- a/QuranX.Web/packages.config
+++ b/QuranX.Web/packages.config
@@ -4,6 +4,7 @@
   <package id="bootstrap" version="3.3.7" targetFramework="net471" />
   <package id="jQuery" version="3.3.1" targetFramework="net471" />
   <package id="jQuery.Validation" version="1.17.0" targetFramework="net471" />
+  <package id="Lucene.Net" version="3.0.3" targetFramework="net471" />
   <package id="Microsoft.ApplicationInsights" version="2.7.2" targetFramework="net471" />
   <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="2.4.0" targetFramework="net471" />
   <package id="Microsoft.ApplicationInsights.DependencyCollector" version="2.7.2" targetFramework="net471" />
@@ -21,6 +22,7 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net471" />
   <package id="Modernizr" version="2.8.3" targetFramework="net471" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net471" />
+  <package id="SharpZipLib" version="0.86.0" targetFramework="net471" />
   <package id="System.Configuration.ConfigurationManager" version="4.5.0" targetFramework="net471" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.5.0" targetFramework="net471" />
   <package id="System.Reflection.Emit" version="4.3.0" targetFramework="net471" />
