--- a/QuranX.Web/Web.config
+++ b/QuranX.Web/Web.config
@@ -12,7 +12,7 @@
 	</appSettings>
 	<system.web>
 		<compilation debug="true" targetFramework="4.7.1" />
-		<customErrors mode="Off" />
+		<customErrors mode="RemoteOnly" />
 		<httpRuntime targetFramework="4.7.1" relaxedUrlToFileSystemMapping="true" />
 		<httpModules>
 			<add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
@@ -60,6 +60,10 @@
 			<dependentAssembly>
 				<assemblyIdentity name="Unity.Abstractions" publicKeyToken="6d32ff45e0ccc69f" culture="neutral" />
 				<bindingRedirect oldVersion="0.0.0.0-3.3.1.0" newVersion="3.3.1.0" />
+			</dependentAssembly>
+			<dependentAssembly>
+				<assemblyIdentity name="Microsoft.ApplicationInsights" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+				<bindingRedirect oldVersion="0.0.0.0-2.7.2.0" newVersion="2.7.2.0" />
 			</dependentAssembly>
 		</assemblyBinding>
 	</runtime>
