--- a/QuranX.Web/packages.config
+++ b/QuranX.Web/packages.config
@@ -9,6 +9,7 @@
   <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="2.4.0" targetFramework="net471" />
   <package id="Microsoft.ApplicationInsights.DependencyCollector" version="2.7.2" targetFramework="net471" />
   <package id="Microsoft.ApplicationInsights.PerfCounterCollector" version="2.7.2" targetFramework="net471" />
+  <package id="Microsoft.ApplicationInsights.SnapshotCollector" version="1.3.1" targetFramework="net471" />
   <package id="Microsoft.ApplicationInsights.Web" version="2.7.2" targetFramework="net471" />
   <package id="Microsoft.ApplicationInsights.WindowsServer" version="2.7.2" targetFramework="net471" />
   <package id="Microsoft.ApplicationInsights.WindowsServer.TelemetryChannel" version="2.7.2" targetFramework="net471" />
