--- a/QuranX.Web/QuranX.Web.csproj
+++ b/QuranX.Web/QuranX.Web.csproj
@@ -17954,6 +17954,7 @@
     <Content Include="Content\Images\ArabicWords\e1ba93c4816c696dc5ab6e61.png" />
     <Content Include="Content\Images\HeaderRepeat.jpg" />
     <Content Include="Content\Images\QuranX.png" />
+    <Content Include="Content\Images\QuranXSocialIcon.png" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
