--- a/QuranX.Web/QuranX.Web.csproj
+++ b/QuranX.Web/QuranX.Web.csproj
@@ -195,6 +195,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\UnityConfig.cs" />
     <Compile Include="ArabicHelper.cs" />
+    <Compile Include="Controllers\AboutController.cs" />
     <Compile Include="Controllers\HadithIndexController.cs" />
     <Compile Include="Controllers\RootAnalysisController.cs" />
     <Compile Include="Controllers\SiteSearchController.cs" />
@@ -347,15 +348,15 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
-    <Content Include="Content\Images\AppleTouchIcons\apple-touch-icon-114x114.png" />
-    <Content Include="Content\Images\AppleTouchIcons\apple-touch-icon-120x120.png" />
-    <Content Include="Content\Images\AppleTouchIcons\apple-touch-icon-144x144.png" />
-    <Content Include="Content\Images\AppleTouchIcons\apple-touch-icon-152x152.png" />
-    <Content Include="Content\Images\AppleTouchIcons\apple-touch-icon-180x180.png" />
-    <Content Include="Content\Images\AppleTouchIcons\apple-touch-icon-192x192.png" />
-    <Content Include="Content\Images\AppleTouchIcons\apple-touch-icon-57x57.png" />
-    <Content Include="Content\Images\AppleTouchIcons\apple-touch-icon-72x72.png" />
-    <Content Include="Content\Images\AppleTouchIcons\apple-touch-icon-76x76.png" />
+    <Content Include="apple-touch-icon-114x114.png" />
+    <Content Include="apple-touch-icon-120x120.png" />
+    <Content Include="apple-touch-icon-144x144.png" />
+    <Content Include="apple-touch-icon-152x152.png" />
+    <Content Include="apple-touch-icon-180x180.png" />
+    <Content Include="apple-touch-icon-192x192.png" />
+    <Content Include="apple-touch-icon-57x57.png" />
+    <Content Include="apple-touch-icon-72x72.png" />
+    <Content Include="apple-touch-icon-76x76.png" />
     <Content Include="Content\Images\ArabicWords\612d616c696475.png" />
     <Content Include="Content\Images\ArabicWords\612d616d696e74756d.png" />
     <Content Include="Content\Images\ArabicWords\612d616e64686172746168756d.png" />
@@ -18085,6 +18086,7 @@
       <Generator>RazorGenerator</Generator>
       <LastGenOutput>SiteSearch.generated.cs</LastGenOutput>
     </Content>
+    <Content Include="Views\About\About.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
